temp digital only

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Thomas Lewis - Developer</title>
+  <meta property="og:image" content="https://tomlewis.surge.sh/profile.jpg" />
+  <meta property="og:title" content="Thomas Lewis - 2019 Resume" />
+  <meta property="description" content="Full Stack developer with Front End focus. Multi-disciplined in Engineering, Design, and User Experience. Diverse experience and love of learning have given me the ingenuity needed to tackle complex problems while being senstitive to the nuances of user interaction." />
+  <meta property="og:description" content="Full Stack developer with Front End focus. Multi-disciplined in Engineering, Design, and User Experience. Diverse experience and love of learning have given me the ingenuity needed to tackle complex problems while being senstitive to the nuances of user interaction." />
+  <title>Thomas Lewis - Developer - 2019 Resume</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -18,7 +22,7 @@
 
         <!-- <div class="hdr__tag">Solution Architect</div> -->
 
-        <div class="objective">Full Stack developer with Front End focus. Multi-disciplined in Engineering, Design, and User Experience. Diverse experience and love of learning have given me the ingenuity needed to tackle complex problems while being senstitive to the nuances of user interaction.</div>
+        <div class="objective"><div class="hdr__role">Full Stack developer with Front End focus. </div>Multi-disciplined in Engineering, Design, and User Experience. Diverse experience and love of learning have given me the ingenuity needed to tackle complex problems while being sensitive to the nuances of user interaction.</div>
       </div>
     </div>
 
@@ -111,18 +115,20 @@
 <section class="education">
   <div class="container">
     <h2>Education</h2>
-    <div class="edu__block">
-      <div class="edu__school">Oregon State University - 2014</div>
-      <div class="edu__degree">Bachelor of Science</div>
-      <div class="edu__degree">Computer Science</div>
-      <div class="edu__status">4.0 GPA</div>
-    </div>
-
-    <div class="edu__block">
-      <div class="edu__school">Alfred University - 2006</div>
-      <div class="edu__degree">Bachelor of Fine Arts</div>
-      <div class="edu__degree">Expanded Media</div>
-      <div class="edu__status">Magna Cum Laude</div>
+    <div class="edu__block_wrap">
+      <div class="edu__block">
+        <div class="edu__school">Oregon State University - 2014</div>
+        <div class="edu__degree">Bachelor of Science</div>
+        <div class="edu__degree">Computer Science</div>
+        <div class="edu__status">4.0 GPA</div>
+      </div>
+      
+      <div class="edu__block">
+        <div class="edu__school">Alfred University - 2006</div>
+        <div class="edu__degree">Bachelor of Fine Arts</div>
+        <div class="edu__degree">Expanded Media</div>
+        <div class="edu__status">Magna Cum Laude</div>
+      </div>
     </div>
   </div>
 </section>
@@ -217,14 +223,13 @@
 <section class="about">
   <div class="container">
     <h2>About</h2>
-    Passionate about building high quality software
-    Lifelong pursuit developing my craft for code that is easy to read and maintain
+    Passionate about crafting beautiful solutions that make life easier. After every project, I reflect on how could the process have been more efficient, code easier to maintain, or the structure easier to understanding.
 
-    I live in beautiful Portland OR and enjoy going camping on the coast or in the mountains on the weekends with my two boys.
+    Lives in beautiful Portland OR and enjoy going camping on the coast or in the mountains on the weekends with my two boys.
 
     Life long pursuit of baking the perfect pizza.
 
-    Love all kinds of skiing, cycling, hiking, mushroom picking
+    Love all kinds of skiing, cycling, and hanging out in nature
 
     Enjoy mixing Award winning smoothies for my co-workers
     <p></p>
