--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
           <div class="exp__date">2019</div>
 
           <ul class="exp__list">
-            <li>Responsible for leading development on web apps, web sites, and misc programming projects for a wide range of clients and industries. Involved in advising, implementation strategy, estimating, and execution of projects.</li>
+            <li>Responsible for leading development on web apps, web sites, and misc. programming projects for a wide range of clients and industries. Involved in advising, implementation strategy, estimating, and execution of projects.</li>
 
             <li>Built a 3D interactive web app for an electronics test chamber company. Technologies: Javascript, Webcomponents, Webpack,  and Sketchfab API.</li>
 
-            <li>Prototype development and UX advisory role for legal document mananagement application for a major chip fabricator.</li>
+            <li>Prototype development and UX advisory role for legal document management application for a major chip fabricator.</li>
           </ul>
         </section>
         <section>
@@ -57,7 +57,7 @@
 
         <ul class="exp__list">
 
-           <li>Developed a prototype for an Learning Management System comprised of a Ruby on Rails based API backend and Angular front end.</li>
+           <li>Developed a prototype for a Learning Management System comprised of a Ruby on Rails based API backend and Angular front end.</li>
 
            <li>Lead development for a web application for optometrists to use for vision correcting contact lens fitting sessions. Technologies:  Angular, Webpack, Jasmine, and Docker.</li>
 
@@ -122,7 +122,7 @@
         <div class="edu__degree">Computer Science</div>
         <div class="edu__status">4.0 GPA</div>
       </div>
-      
+
       <div class="edu__block">
         <div class="edu__school">Alfred University - 2006</div>
         <div class="edu__degree">Bachelor of Fine Arts</div>
@@ -223,15 +223,15 @@
 <section class="about">
   <div class="container">
     <h2>About</h2>
-    Passionate about crafting beautiful solutions that make life easier. After every project, I reflect on how could the process have been more efficient, code easier to maintain, or the structure easier to understanding.
+   <p> Passionate about crafting beautiful solutions that make life easier. After every project, I reflect on how the process could have been more efficient, the code easier to maintain, or the structure easier to understanding.</p>
 
-    Lives in beautiful Portland OR and enjoy going camping on the coast or in the mountains on the weekends with my two boys.
+    <p>Lives in beautiful Portland OR and enjoy going camping on the coast or in the mountains on the weekends with my two boys.</p>
 
-    Life long pursuit of baking the perfect pizza.
+   <p> Life-long pursuit of baking the perfect pizza.</p>
 
-    Love all kinds of skiing, cycling, and hanging out in nature
+    <p>Love all kinds of skiing, cycling, and hanging out in nature</p>
 
-    Enjoy mixing Award winning smoothies for my co-workers
+   <p> Enjoy mixing Award winning smoothies for my co-workers</p>
     <p></p>
   </div>
 </section>
