--- a/index.html
+++ b/index.html
@@ -22,8 +22,15 @@
 
         <!-- <div class="hdr__tag">Solution Architect</div> -->
 
-        <div class="objective"><div class="hdr__role">Full Stack developer with Front End focus. </div>Multi-disciplined in Engineering, Design, and User Experience. Diverse experience and love of learning have given me the ingenuity needed to tackle complex problems while being sensitive to the nuances of user interaction.</div>
-      </div>
+        <div class="objective">
+          <div class="hdr__role">Product Designer <br> Full Stack developer with Front End focus </div>
+          
+          <div class="header_blurb">
+            Multi-disciplined in Engineering, Design, and User Experience. Ingenious problem solver with a love for learning. Sensitive to the nuances of user interaction.
+          </div>
+          
+          <a class="header_link" href="https://tomlewis.surge.sh/portfolio.html">portfolio</a>
+        </div>
     </div>
 
     <!-- <div class="hdr__curve"></div> -->
@@ -32,23 +39,42 @@
   <section class="experience">
     <div class="container">
       <h2>Experience</h2>
+      <section>
+        <h3>Digital Harbor</h3>
 
+        <div class="exp__title">Product Team Lead, Full Stack Developer</div>
+        <div class="exp__date">2020 - present</div>
 
-        <section>
-          <h3>Ricochet Partners</h3>
+        <ul class="exp__list">
+          <li>Led the Product team, producing wireframes and guiding design efforts for key features, including application flows, layouts, form controls, template systems, and theming systems.</li>
+          <li>Initiated and led the development of Design Kit, a toolset enabling users to build visually appealing and user-friendly forms with ease.</li>
+          <li>Collaborated with the Product Management team to shape user stories, conduct usability assessments, and provide insights for product direction.</li>
+          <li>Acted as a UX expert, mentoring both developers and designers to enhance usability and ensure intuitive user experiences.</li>
+          <li>Assumed multiple roles in the development of collaborative form-building web applications, contributing across product, design, and engineering.</li>
+          <li>Developed a scalable front-end architecture using Angular, with a Nest.js and microservices-based backend.</li>
+          <li>Mentored junior developers in writing clean, maintainable, and efficient code through code reviews, pair programming, and best practices.</li>
+          <li>Led the Form Builder team in designing and implementing an advanced application for creating complex forms with workflows, logic, templates, themes, and collaborative features.</li>
+          <li>Built a front-end state management system using NgRx to optimize application performance and maintainability.</li>
+          <li>Designed and implemented a flexible theming system that supported both simple and advanced customization, with real-time updates and relative color adjustments.</li>
+          <li>Engineered a drag-and-drop layout system with nesting and column division, enabling users to create intricate form layouts with ease.</li>
+        </ul>
+      </section>
 
+      <section>
+        <h3>Ricochet Partners</h3>
 
-          <div class="exp__title">Solution Architect</div>
-          <div class="exp__date">2019</div>
+        <div class="exp__title">Solution Architect</div>
+        <div class="exp__date">2019</div>
 
-          <ul class="exp__list">
-            <li>Responsible for leading development on web apps, web sites, and misc. programming projects for a wide range of clients and industries. Involved in advising, implementation strategy, estimating, and execution of projects.</li>
+        <ul class="exp__list">
+          <li>Responsible for leading development on web apps, web sites, and misc. programming projects for a wide range of clients and industries. Involved in advising, implementation strategy, estimating, and execution of projects.</li>
 
-            <li>Built a 3D interactive web app for an electronics test chamber company. Technologies: Javascript, Webcomponents, Webpack,  and Sketchfab API.</li>
+          <li>Built a 3D interactive web app for an electronics test chamber company. Technologies: Javascript, Webcomponents, Webpack,  and Sketchfab API.</li>
 
-            <li>Prototype development and UX advisory role for legal document management application for a major chip fabricator.</li>
-          </ul>
-        </section>
+          <li>Prototype development and UX advisory role for legal document management application for a major chip fabricator.</li>
+        </ul>
+      </section>
+
         <section>
           <h3>Ricochet Partners</h3>
 
@@ -158,41 +184,34 @@
       {
         name : 'languages',
         skills : [
-          ['Javascript','80'],
-          ['Ruby','60'],
-          ['CSS','90'],
-          ['HTML','90'],
-          ['MySQL','40'],
-          ['Elm','20'],
-          ['Elixir','20']
+        ["Javascript/Typescript", "90"],
+        ["Ruby", "50"],
+        ["CSS", "90"],
+        ["HTML", "90"],
+        ["Elm", "20"],
+        ["Elixir", "20"],
         ]
       },
       {
         name : 'frameworks',
         skills : [
-          ['React','60'],
-          ['Vue','40'],
-          ['Angular','60'],
-          ['Stimulus','50'],
-          ['Rails','50'],
-          ['Unity','20']
+        ["React", "50"],
+        ["Vue", "40"],
+        ["Angular", "80"],
+        ["Svelte", "60"],
+        ["Rails", "40"],
+        ["Unity", "50"],
         ],
       },
       {
         name : 'concepts',
         skills : [
-          // ['GraphQL','20'],
-          // ['REST','60'],
-          // ['Functional Programming','50'],
-          // ['Object Oriented Programming','60'],
-          ['Git','50'],
-          ['Testing','40'],
-          ['Project Management','80'],
-          ['UX','80'],
-          ['UI Design','80'],
-          ['Problem Decomposition','90'],
-          ['Communication','90'],
-          ['Team Leadership','80']
+          ["Product Design", "90"],
+          ["Project Management", "70"],
+          ["UX", "90"],
+          ["UI Design", "70"],
+          ["Communication", "90"],
+          ["Team Leadership", "90"],
         ]
       }
     ]
@@ -220,7 +239,7 @@
     </script>
 </section>
 
-<section class="about">
+<!-- <section class="about">
   <div class="container">
     <h2>About</h2>
    <p> Passionate about crafting beautiful solutions that make life easier. After every project, I reflect on how the process could have been more efficient, the code easier to maintain, or the structure easier to understanding.</p>
@@ -234,17 +253,15 @@
    <p> Enjoy mixing Award winning smoothies for my co-workers</p>
     <p></p>
   </div>
-</section>
+</section> -->
 
-<footer>
+<!-- <footer>
   <div class="container contact">
 
-     <div>4005 SE 49th Ave Portland, OR 97204</div>
-     <div>(503) 475 - 2915</div>
      <div>tlewismedia@gmail.com</div>
    </div>
 
-</footer>
+</footer> -->
 
 
 </body>
